Fixed spacing in planning page with grid css

--- a/planning.css
+++ b/planning.css
@@ -1,8 +1,29 @@
+body{
+  border: 10px solid turquoise;
+  height: auto;
+}
+.wrapperContainer{
+   display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 5px;
+  grid-auto-rows: minmax(100px, auto); 
+}
+.todo{
+  grid-column: 2 / 3;
+  grid-row: 1 / 1;
+
+}
+.calendarGrid{
+  grid-column: 1 / 4;
+  grid-row: 4 / 5;
+
+}
 .welcomeplan{
   margin-top:80px;
   display: flex;
   justify-content: space-around;
   color:teal;
+font-size: 250%;
 }
 .introplan{
 padding-left:15%;
@@ -11,7 +32,7 @@ font-size: 20px;
 color: teal;
 }
 
-body{
+/* body{
   border: 10px solid turquoise;
   height: 1550px;
 }
@@ -26,7 +47,7 @@ top: -60px;
   min-height: 100vh;
   padding: 10px;
 }
-
+ */
 .todo-app{
   width:100%;
   max-width:540px;
@@ -350,4 +371,13 @@ body {
 .calendar{
    position: relative;
   top: -15%;
+}
+
+footer{
+  text-align: center;
+  margin-top: 50px;
+  background-color: #e9f1f5;
+  border-radius: 70px;
+  padding-top: 25px;
+  padding-bottom: 25px;
 }
