--- a/styles/pomodoro.css
+++ b/styles/pomodoro.css
@@ -209,4 +209,13 @@ left: 40%;
   top: 210%;
    
 }
+
+footer{
+  text-align: center;
+  margin-top: 50px;
+  background-color: #e9f1f5;
+  border-radius: 70px;
+  padding-top: 25px;
+  padding-bottom: 25px;
+}
  
